dev-helm/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: kong
    #kong.ingress.kubernetes.io/force-ssl-redirect: "true"
    kong.ingress.kubernetes.io/backend-protocol: HTTP
    #kong.ingress.kubernetes.io/proxy-connect-timeout: "300"
    #kong.ingress.kubernetes.io/proxy-read-timeout: "300"
    #kong.ingress.kubernetes.io/proxy-send-timeout: "300"
    #kong.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
    - argo.hossam.io
    secretName: argo-ingress-tls
  rules:
  - host: argo.hossam.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
